# EvoAdAgent

./: .gitignore  README.md  pyproject.toml
examples/: benchmark_run.py  demo_evolution.py  demo_merge.py  render_viz_pngs.py  viz_evolution.py
src/: config.py  llm_factory.py  models.py
src/agent/: distiller.py  evo_ad_agent.py  executor.py  reflector.py  verifier.py
src/data/: kuairec_loader.py
src/memory/: __init__.py  campaign_log.py  evolution_log.py  strategy_lib.py  user_profile.py
src/simulation/: ad_environment.py  scenarios.py  user_simulator.py
src/tools/: __init__.py  ad_tools.py  audience_analyzer.py  bidding.py  creative_generator.py  performance.py  targeting.py  user_retrieval.py
tests/: conftest.py  test_distiller.py  test_evolution_log.py  test_memory.py  test_models.py  test_simulation.py  test_tools.py  test_user_profile.py  test_user_retrieval.py  test_user_simulator.py  test_verifier.py
