[project]
name = "evo-ad-agent"
version = "0.1.0"
description = "A self-evolving agent for ad/recommendation optimization. Learns from experience, distills reusable strategies, and continuously improves through reflexion."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0",
    "httpx>=0.28.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
qwen = [
    "dashscope>=1.20.0",
]
deepseek = [
    "openai>=1.50.0",
]
viz = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
